<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICCOMA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="standby">Standby</string>
    <string name="order">Order</string>
    <string name="address_">Address:</string>
    <string name="password_">Password:</string>
    <string name="cups_number">Cups number</string>
    <string name="offline">Offline</string>
    <string name="configure">Configure</string>
    <string name="reset_iccoma">Reset ICCOMA</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="description">ICCOMA Remote Control Application</string>
    <string name="open_tray">Open Tray</string>
    <string name="close_tray">Close Tray</string>

</resources>
